fix left margin alignment for footer

--- a/src/main/webapp/ngboostrap/app/views/root/css/root.less
+++ b/src/main/webapp/ngboostrap/app/views/root/css/root.less
@@ -15,7 +15,7 @@
 		
 	.fixed-header &{
 			@media (min-width: @screen-sm-min){
-				padding-top: @sidemenu-top;
+				padding-top: @sidemenu-top + @navbar-margin-bottom;
 			}		
 	}	
 
@@ -25,7 +25,7 @@
 			padding-left: @sidemenuOn-margin-left;
 		}		
 		@media (max-width: @screen-xs-max) {
-			margin-left: -15px;			
+			margin-left: -(@grid-gutter-width / 2);			
 		}
 		transition: padding .5s ease;
 		
@@ -34,7 +34,7 @@
 				padding-left: @sidemenuOn-margin-left-shrink;			
 			}			
 			@media (max-width: @screen-xs-max) {
-				margin-left: -15px;
+				margin-left: -(@grid-gutter-width / 2);
 			}
 			transition: padding .5s ease;
 		}
@@ -57,6 +57,7 @@
 		color: @navbar-default-color;
 		margin-bottom: 0;
 	}
+	
 	&.sidemenuOn{
 //		height: 52px;
 //		padding: 15px 13px 0;
@@ -64,7 +65,7 @@
 		transition: padding .5s ease;
 		
 		@media (min-width: @screen-sm-min){
-			padding-left: @sidemenuOn-margin-left;			
+			padding-left: @sidemenuOn-margin-left - (@grid-gutter-width / 2);			
 			padding-top: -@footer-height;
 		}
 		@media (max-width: @screen-xs-max){
@@ -78,7 +79,7 @@
 		&.shrink{
 			transition: padding .5s ease;
 			@media (min-width: @screen-sm-min){
-				padding-left: @sidemenuOn-margin-left-shrink;
+				padding-left: @sidemenuOn-margin-left-shrink - (@grid-gutter-width / 2);
 			}
 //			padding-left: @sidemenuOn-margin-left-shrink;
 		}
